--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,8 @@ jobs:
   test:
     name: run tests and linters
     uses: kubewarden/github-actions/.github/workflows/reusable-test-policy-go-wasi.yml@v3.3.5
+    with:
+      artifacthub: false
 
   release:
     needs: test
@@ -25,3 +27,4 @@ jobs:
     uses: kubewarden/github-actions/.github/workflows/reusable-release-policy-go-wasi.yml@v3.3.5
     with:
       oci-target: ghcr.io/${{ github.repository_owner }}/policies/kyverno-dsl
+      artifacthub: false
