ci: bring more automation
- Enable release-drafter GitHub Action to automatically draft a new release
  based on the commit messages.
- renovatebot: use central configuration file

Signed-off-by: Flavio Castelli <fcastelli@suse.com>

--- a/renovate.json
+++ b/renovate.json
@@ -1,10 +1,13 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base"],
+  "extends": [
+    "github>kubewarden/github-actions//renovate-config/policies"
+  ],
   "packageRules": [
     {
-      "matchDatasources": ["go"],
-      "enabled": false
+      "description": "Update GitHub Actions",
+      "matchManagers": ["github-actions"],
+      "groupName": "github-actions",
+      "groupSlug": "github-actions"
     }
   ]
 }
